--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,13 @@ project(${PROJECT_NAME})
 set(CMAKE_C_COMPILER cl)
 set(CMAKE_CXX_COMPILER cl)
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-
-add_subdirectory(thirdparty/glfw)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 file(GLOB_RECURSE  SOURCES 
 "${CMAKE_SOURCE_DIR}/src/*.cpp"
+"${CMAKE_SOURCE_DIR}/main/entry.cpp"
+"${CMAKE_SOURCE_DIR}/main/enter.cpp"
 # "${CMAKE_SOURCE_DIR}/main/windows/*.cpp"
 )
 
@@ -19,8 +21,11 @@ add_executable(${PROJECT_NAME}  ${SOURCES})
 
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(Vulkan REQUIRED) 
+find_package(glfw3 REQUIRED) 
+target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
 target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan)
 target_link_libraries(${PROJECT_NAME} PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(${PROJECT_NAME} PRIVATE thirdparty/glfw/include)
